Fix page title overflowing

--- a/assets/css/page.css
+++ b/assets/css/page.css
@@ -14,7 +14,7 @@ h1 {
   margin: 10px -2vw;
 }
 
-@media (max-width: 1200px) and (min-width: 768px){
+@media (max-width: 1200px) {
   h1 {
     font-size: 2.5em;
   }
